--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chromedriver": "^2.21.2",
     "fs": "0.0.2",
     "mocha": "^2.4.5",
-    "selenium-webdriver": "2.45.0"
+    "selenium-webdriver": "2n.45.0"
   }
 }
